# HelloWorld

./: .gitignore  CMakeLists.txt  Makefile  README.md  bind-cori-a100.sh  bind-cori-v100.sh  cudahello.cpp  job.sh  mpihello.cpp  nvidia-smi-topo.out  nvidia-smi.out  run-test-a100-slurm_only.sh  run-test-a100-wo_numactl.sh  run-test-a100.sh  run-test-v100.sh  run-test.sh
